--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,11 +19,11 @@
           <i class="bi bi-people-fill me-2"></i> Manage Users
         </a>
       </li>
-      <li class="nav-item mb-2" *ngIf="role === 'user'">
+      <!-- <li class="nav-item mb-2" *ngIf="role === 'user'">
         <a routerLink="/manage-users" class="nav-link text-white">
           <i class="bi bi-people-fill me-2"></i> Manage Users
         </a>
-      </li>
+      </li> -->
       <li class="nav-item mb-2" *ngIf="role === 'admin'">
         <a routerLink="/land-entry" class="nav-link text-white">
           <i class="bi bi-pencil-square me-2"></i> Land Entry
