--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
       </li>
 
       <li class="nav-item mb-2">
-        <a routerLink="/areamaster" class="nav-link text-white">
+        <a [routerLink]="['/areamaster']" class="nav-link text-white">
           <i class="bi bi-pencil-square me-2"></i> Land Entry
         </a>
       </li>
