--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
   <ul class="nav flex-column">
     <!-- Dashboard -->
     <li class="nav-item mb-2">
-      <a routerLink="/dashboard" class="nav-link text-white">
+      <a  [routerLink]="['/dashboard']" class="nav-link text-white">
         <i class="bi bi-speedometer2 me-2"></i> Dashboard
       </a>
     </li>
@@ -20,7 +20,7 @@
     <!-- Admin Specific Links -->
     <ng-container *ngIf="role === 'admin'">
       <li class="nav-item mb-2">
-        <a routerLink="/manage-users" class="nav-link text-white">
+        <a  [routerLink]="['/usermanagement']" class="nav-link text-white">
           <i class="bi bi-people-fill me-2"></i> Manage Users
         </a>
       </li>
@@ -32,19 +32,19 @@
       </li>
 
       <li class="nav-item mb-2">
-        <a routerLink="/wingmaster" class="nav-link text-white">
+        <a  [routerLink]="['/wingmaster']" class="nav-link text-white">
           <i class="bi bi-diagram-3-fill me-2"></i> Wing Master
         </a>
       </li>
 
       <li class="nav-item mb-2">
-        <a routerLink="/master-area" class="nav-link text-white">
+        <a  [routerLink]="['/areamaster']" class="nav-link text-white">
           <i class="bi bi-map-fill me-2"></i> Area Master
         </a>
       </li>
 
       <li class="nav-item mb-2">
-        <a routerLink="/voilations" class="nav-link text-white">
+        <a  [routerLink]="['/voilations']" class="nav-link text-white">
           <i class="bi bi-exclamation-triangle-fill me-2"></i> Violation Master
         </a>
       </li>
@@ -53,19 +53,19 @@
     <!-- User Specific Links -->
     <ng-container *ngIf="role === 'user'">
       <li class="nav-item mb-2">
-        <a routerLink="/records" class="nav-link text-white">
+        <a  [routerLink]="['/records']" class="nav-link text-white">
           <i class="bi bi-folder2-open me-2"></i> My Records
         </a>
       </li>
 
       <li class="nav-item mb-2">
-        <a routerLink="/violations" class="nav-link text-white">
+        <a  [routerLink]="['/violations']" class="nav-link text-white">
           <i class="bi bi-eye-fill me-2"></i> View Violations
         </a>
       </li>
 
       <li class="nav-item mb-2">
-        <a routerLink="/areas" class="nav-link text-white">
+        <a  [routerLink]="['/areas']" class="nav-link text-white">
           <i class="bi bi-geo-fill me-2"></i> View Areas
         </a>
       </li>
