--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
       <!-- Admin Specific Links -->
       <ng-container *ngIf="role === 'admin'">
         <li class="nav-item mb-2">
-          <a [routerLink]="['/manage-users']" class="nav-link text-white">
+          <a [routerLink]="['/usermanagement']" class="nav-link text-white">
             <i class="bi bi-people-fill me-2"></i> Manage Users
           </a>
         </li>
