--- a/src/app/components/usermanagement/usermanagement.component.html
+++ b/src/app/components/usermanagement/usermanagement.component.html
@@ -1,4 +1,3 @@
-<p>usermanagement works!</p>
 <div class="container mt-4">
     <h3>User Management</h3>
   
@@ -38,7 +37,7 @@
         <tr *ngFor="let user of users">
           <td>{{ user.username }}</td>
           <td>{{ user.email }}</td>
-          <td>{{ user.role | uppercase }}</td>
+          <td>{{ user.role.toUpperCase() }}</td>
           <td>
             <button class="btn btn-sm btn-outline-primary me-2" (click)="edit(user)">Edit</button>
             <button class="btn btn-sm btn-outline-danger" (click)="delete(user.id)">Delete</button>
