--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,11 @@
           </a>
         </li>
         <li class="nav-item mb-2">
+          <a [routerLink]="['/geolocation']" class="nav-link text-white">
+            <i class="bi bi-people-fill me-2"></i> Geo Location Data
+          </a>
+        </li>
+        <li class="nav-item mb-2">
           <a [routerLink]="['/areamaster']" class="nav-link text-white">
             <i class="bi bi-pencil-square me-2"></i> Land Entry
           </a>
