--- a/src/app/components/masters/geolocation/geolocation.component.html
+++ b/src/app/components/masters/geolocation/geolocation.component.html
@@ -1,6 +1,6 @@
-<p>geolocation works!</p>
+<h3>Geo-Location Based Complaint Registration!</h3>
 <div class="p-4 space-y-4 bg-white shadow rounded">
-    <h2 class="text-xl font-semibold">Geolocation Input</h2>
+    <h2 class="text-xl font-semibold">Register Encrochment</h2>
   
     <div class="space-y-2">
       <label class="block font-medium">Latitude</label>
