--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
     <!-- Greeting -->
     <h2 class="text-center mb-4 text-success">
       Welcome, {{ username }}
-      <span class="badge bg-secondary">{{ role | titlecase }}</span>
+      <!-- <span class="badge bg-secondary">{{ role | titlecase }}</span> -->
     </h2>
   
     <!-- Infographic Cards -->
